# PaintMixer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: pexels-photo-977737-extractedPalette.json
palettes/BasePigments/: AcrylicsBasePigments.json  CurtisWaterColorBasePigments.json
src/: ColorExtraction.cxx  ColorExtraction.hxx  PaintCoeff.cxx  PaintCoeff.hxx  PaintMixer.cxx  PaintMixer.hxx  Palette.cxx  Palette.hxx  Serialization.cxx  Serialization.hxx  Types.hxx  main.cpp
src/include/PaintMixer/: KubelkaMunk.hxx  PaintCoeff.hxx  PaintMixer.hxx  Serialization.hxx  Types.hxx
test/: main.cxx
